--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -13,7 +13,8 @@
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">Login</button>
-                <a href="{% provider_login_url 'github' %}" class="fa fa-github" style="margin-left: 10px; padding: 5px; font-size: 30px; background: #333333; color: #ffffff"><span style="font-size: 20px; margin-left: 10px">Github</span></a>
+                <a href="{% provider_login_url 'github' %}" class="fa fa-github" style="margin-left: 10px; padding: 5px; font-size: 30px; background: #333333; color: #ffffff; text-decoration: None"><span style="font-size: 20px; margin-left: 10px">Github</span></a>
+                <a href="{% provider_login_url 'google' %}" class="fa fa-google" style="margin-left: 10px; padding: 5px; font-size: 30px; background: #dd4b39; color: #ffffff; text-decoration: None"><span style="font-size: 20px; margin-left: 10px">Google</span></a>
                 <small class="text-muted ml-2">
                     <a href="{% url 'password_reset' %}">Forgot Password?</a>
                 </small>
